force-app/main/default/objects/Product_Visit__c/Product_Visit__c.object-meta.xml
<CustomObject>
    <label>Product Visit</label>
    <nameField>
        <displayFormat>PRD-{0000}</displayFormat>
        <label>Product Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>