force-app/main/default/objects/Product_Visit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Visit__r.Account__r.Name</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>