force-app/main/default/objects/Product_Visit__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <formula>Visit__r.Key_Contact__r.FirstName  &amp; &apos; &apos; &amp;  Visit__r.Key_Contact__r.LastName</formula>
    <label>Contact</label>
    <type>Text</type>
</CustomField>