force-app/main/default/objects/Product_Visit__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Second Level Hierarchy products can be selected.</errorMessage>
        <filterItems>
            <field>Product2.Name</field>
            <operation>contains</operation>
            <value>GENERAL</value>
        </filterItems>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Discussed on Visits</relationshipLabel>
    <relationshipName>Product_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>