force-app/main/default/objects/Product_Visit__c/fields/Second_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Second_Hierarchy__c</fullName>
    <formula>TEXT( Product__r.Second_Level_Hiearchy__c )</formula>
    <label>Second Hierarchy</label>
    <type>Text</type>
</CustomField>