force-app/main/default/objects/Product_Visit__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Products Discussed</relationshipLabel>
    <relationshipName>Product_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>